메인 업데이트

--- a/pub_list.html
+++ b/pub_list.html
@@ -160,6 +160,15 @@
                     con:'완료',
                     etc:''
                 },
+                {
+                    division: '',
+                    depth1:'메인2',
+                    path:'./portal/html/main_02.html',
+                    date:'2022-10-04',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
 
                 // 벤처투자매칭
                 {
