--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -385,9 +385,9 @@
                             </div>
                         </div>
                         <div class="design_ci">
-                            <img src="" alt="ci 이미지">
+                            <div class="img"><img src="../images/logo_b.png" alt="ci 이미지"></div>
                             <div class="btn_box bg">
-                                <a href="" class="download">벤처투자포털 CI 다운로드</a>
+                                <a href="" class="download" download>벤처투자포털 CI 다운로드</a>
                             </div>
                         </div>
                         <div class="design_color">
