--- a/pub_list.html
+++ b/pub_list.html
@@ -622,9 +622,9 @@
                     division: '벤처투자포털',
                     depth1:'포털소개',
                     path:'./portal/html/USR-1310-H-CONTN.html',
-                    date:'',
+                    date:'2022-10-04',
                     mdate:'2022-11-08',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
