--- a/portal/html/USR-20411-F-FORM.html
+++ b/portal/html/USR-20411-F-FORM.html
@@ -651,26 +651,78 @@
                                         </div>
                                     </td>
                                 </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="tit_box">
+                        <h4><span></span>관심정보(선택사항)</h4>
+                    </div>
+
+                    <div class="tbl_box_data">
+                        <table>
+                            <caption>기업정보</caption>
+                            <colgroup>
+                                <col width="20%;">
+                                <col width="30%;">
+                                <col width="20%;">
+                                <col width="30%;">
+                            </colgroup>
+                            <tbody>
                                 <tr>
-                                    <th scope="row"><label for="input_009">기업소개</label></th>
+                                    <th scope="row"><label for="radio_001">관심분야</label></th>
                                     <td colspan="3">
                                         <div class="inp_group">
-                                            <div class="textarea_box">
-                                                <textarea id="textarea_01" placeholder="회사 소개를 간략히 작성해주세요. (300자 이내)"></textarea>
+                                            <div class="chk_box">
+                                                <span>
+                                                    <input type="checkbox" id="chk_1">
+                                                    <label for="chk_1">벤처기업</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_2">
+                                                    <label for="chk_2">구주거래</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_3">
+                                                    <label for="chk_3">투자 트렌드</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_4">
+                                                    <label for="chk_4">투자자</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_5">
+                                                    <label for="chk_5">투자상담</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_6">
+                                                    <label for="chk_6">멘토링-컨설팅</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_7">
+                                                    <label for="chk_7">커뮤니티</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_8">
+                                                    <label for="chk_8">투자교육</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_8">
+                                                    <label for="chk_8">정책</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_8">
+                                                    <label for="chk_8">통계</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_8">
+                                                    <label for="chk_8">구인·구직</label>
+                                                </span>
+                                                <span>
+                                                    <input type="checkbox" id="chk_8">
+                                                    <label for="chk_8">불법벤처투자</label>
+                                                </span>
                                             </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row"><label for="file_inp">사업계획서<span class="req">*</span></label></th>
-                                    <td colspan="3">
-                                        <div class="inp_group file">
-                                            <div class="file_box">
-                                                <input type="file" id="file_inp" class="file_inp">
-                                                <label for="file_inp">파일첨부</label>
-                                                <span class="file_value"></span>
-                                            </div>
-                                            <span class="txt_etc">100MB 이내 가능</span>
                                         </div>
                                     </td>
                                 </tr>
@@ -682,7 +734,7 @@
 
                 <div class="btn_box_group type_01">
                     <div class="btn_box">
-                        <a href="javascript:void(0);" class="btn_navy dialog-link" data-target="#alpop_02">상세기업정보 변경</a>
+                        <a href="javascript:void(0);" class="btn_navy dialog-link" data-target="#alpop_02">기업추가정보 등록</a>
                     </div>
                     <div class="btn_box">
                         <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#alpop_01">수정</a>
