--- a/pub_list.html
+++ b/pub_list.html
@@ -861,7 +861,7 @@
                     date:'2022-09-06',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:'[1차디자인]사용자정보-기업 추가정보입력으로 변경'
                 },
                 {
                     division: '',
