--- a/portal/html/USR-2041-F-FORM.html
+++ b/portal/html/USR-2041-F-FORM.html
@@ -466,7 +466,7 @@
 
                     <div class="btn_box_group type_01">
                         <div class="btn_box">
-                            <a href="" class="btn_blue">회원유형 변경신청</a>
+                            <a href="" class="btn_blue dialog-link" data-target="#note_03">회원유형 변경신청</a>
                         </div>
                         <div class="btn_box">
                             <a href="javascript:void(0);" class="btn_white dialog-link" data-target="#note_01">비밀번호 변경</a>
@@ -803,6 +803,56 @@
         <div class="btn_box">
             <button class="btn_white pop_close">취소</button>
             <button class="btn_mint pop_close" onclick="onShowToast('회원정보가 정상적으로 수정되었습니다.')">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 회원유형 변경 신청 팝업 -->
+<div id="note_03" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>회원유형 변경 신청</h3>
+    </div>
+
+    <div class="vics_group">
+        <div class="vics_txt">
+            회원유형 변경과 전문투자자 변경에 관한 안내 문구 표시
+        </div>
+        <div class="tbl_box_data">
+            <table>
+                <caption>회원유형 변경 테이블</caption>
+                <colgroup>
+                    <col width="20%;">
+                    <col width="30%;">
+                    <col width="20%;">
+                    <col width="30%;">
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th scope="row"><label for="input_0111">VICS ID</label></th>
+                        <td colspan="3">
+                            <div class="inp_group search">
+                                <div class="inp_box min">
+                                    <input type="text" id="input_0111" placeholder="venture 입력 또는 미입력">
+                                </div>
+                                <div class="box_btn">
+                                    <button class="search" onclick="onShowToast('일치된 정보가 없어 회원유형 변경이 불가능합니다.')">재직확인</button>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow" onclick="onShowToast('회원유형 변경 처리가 완료되었습니다.')">변경신청</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow">취소</a>
         </div>
     </div>
 
