벤처투자마트수정

--- a/portal/html/USR-1056-F-LIST.html
+++ b/portal/html/USR-1056-F-LIST.html
@@ -339,98 +339,113 @@
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>신청</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">신청</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>거절</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">승인</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>승인</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">거절</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>신청</span>
+                                    <span class="state gray">2차 신청서 작성</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">2차 신청서 작성</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>신청</span>
+                                    <span class="state red">불참: 2022-08-10</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">신청</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>신청</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">신청</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
                         <li>
                             <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
+                                    <span>202207-00015</span>
                                     <span>VC TRACK</span>
+                                    <span>신청</span>
                                     <strong>벤처투자마트 신청서</strong>
                                 </div>
                             </a>
                             <div class="info">
-                                <div class="state">신청</div>
                                 <ul>
-                                    <li>신청일 2022-08-26</li>
+                                    <li>신청일자 2022-08-26</li>
+                                    <li>최종처리일자 2022-08-26</li>
                                 </ul>
                             </div>
                         </li>
